link open in new tab added

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 <h4 class="text-danger invisible">.</h4>
             </div>
             <div class="row mt-3 justify-content-center">
-                <a href="https://www.instagram.com/parsa_lmn/">
+                <a href="https://www.instagram.com/parsa_lmn/" target="_blank">
                     <i class="fa fa-instagram fa-15x text-dark px-2"></i>
                 </a>
-                <a href="https://t.me/parsa_lmn">
+                <a href="https://t.me/parsa_lmn" target="_blank">
                     <i class="fa fa-telegram fa-15x text-dark px-2"></i>
                 </a>
                 <a
-                    href="https://ir.linkedin.com/in/parsa-larimian-338738148?trk=people-guest_profile-result-card_result-card_full-click">
+                    href="https://ir.linkedin.com/in/parsa-larimian-338738148?trk=people-guest_profile-result-card_result-card_full-click" target="_blank">
                     <i class="fa fa-linkedin fa-15x text-dark px-2"></i>
                 </a>
             </div>
