--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
     </style>
 </head>
 
-<body class="bg-img w-100 h-100">
+<body class=" w-100 h-100">
     <div class="w-100 h-100 d-flex">
-        <div class="d-flex flex-column w-100 justify-content-center">
-            <div class="row p-4 bg-blur justify-content-center shadow">
+        <div class="d-flex flex-column w-100 justify-content-center shadow">
+            <div class="row p-4 bg-blur justify-content-center">
                 <h4 id="typing" class="text-white"></h4>
                 <h4 class="text-danger invisible">.</h4>
             </div>
-            <div class="row mt-3 justify-content-center">
+            <div class="row p-3 bg-blur justify-content-center">
                 <a href="https://www.instagram.com/parsa_lmn/" target="_blank">
-                    <i class="fa fa-instagram fa-15x text-dark px-2"></i>
+                    <i class="fa fa-instagram fa-15x text-light px-2"></i>
                 </a>
                 <a href="https://t.me/parsa_lmn" target="_blank">
-                    <i class="fa fa-telegram fa-15x text-dark px-2"></i>
+                    <i class="fa fa-paper-plane fa-15x text-light px-2"></i>
                 </a>
                 <a href="https://ir.linkedin.com/in/parsa-larimian-338738148?trk=people-guest_profile-result-card_result-card_full-click"
                     target="_blank">
-                    <i class="fa fa-linkedin fa-15x text-dark px-2"></i>
+                    <i class="fa fa-linkedin fa-15x text-light px-2"></i>
                 </a>
             </div>
         </div>
