scroll small screen fixed

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     </main>
     <footer style="position: absolute;bottom: 0;width: 100%;" class="bg-dark-cety">
         <div class="container mx-auto py-3 d-flex flex-row justify-content-between align-items-center">
-            <div class="col-12 col-sm-3 d-flex justify-content-center text-myOrange hover-text-white-cety active-text-white-cety">
+            <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center text-myOrange hover-text-white-cety active-text-white-cety">
                 <div class="">Email: &nbsp;</div>
                 <div>parsa_lmn@yahoo.com</div>
             </div>
-            <small class="col-12 col-sm-3 text-myOrange hover-text-white-cety active-text-white-cety">
+            <small id="smalltxt" class="col-12 col-sm-3 text-myOrange hover-text-white-cety active-text-white-cety">
                 2019 Par3a All rights reserved
             </small>
         </div>
